		What has changed in GDB?
	     (Organized release by release)

*** Changes since GDB 13

* New commands

maint jit dump
  Dump an in-memory JIT object into a file.

set|show scheduler-locking-eval (on|off)
  The new setting allows a user to lock scheduler during inferior calls.
  It can be set in parallel to scheduler-locking step or replay mode.

* Add convenience variable `$_simd_lane`.

* MI changes

  ** '-break-insert -l'

     Added optional -l <simd-lane-id> argument to MI command -break-insert.
     A lane can be specified only together with the thread: user must provide
     a thread with -p argument.

     MI result output for -break-insert command will also contain
     lane="simd-lane-id" information if -l argument was specified.

     Also the MI output of -break-list and -break-info commands will have
     lane="simd-lane-id" information if the breakpoint is thread and SIMD lane
     spefific.

*** Changes in GDB 13

* MI version 1 is deprecated, and will be removed in GDB 14.

* GDB now supports dumping memory tag data for AArch64 MTE.  It also supports
  reading memory tag data for AArch64 MTE from core files generated by
  the gcore command or the Linux kernel.

  When a process uses memory-mapped pages protected by memory tags (for
  example, AArch64 MTE), this additional information will be recorded in
  the core file in the event of a crash or if GDB generates a core file
  from the current process state.  GDB will show this additional information
  automatically, or through one of the memory-tag subcommands.

* "info breakpoints" now displays enabled breakpoint locations of
  disabled breakpoints as in the "y-" state.  For example:

   (gdb) info breakpoints
   Num     Type           Disp Enb Address            What
   1       breakpoint     keep n   <MULTIPLE>
   1.1                         y-  0x00000000000011b6 in ...
   1.2                         y-  0x00000000000011c2 in ...
   1.3                         n   0x00000000000011ce in ...
